<resources>
    <string name="app_name">DigitalProject</string>
    <string name="login_edittext">Login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="sing_up_under"><u>Sing up</u>.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome_back__string">Welcome Back!</string>
    <string name="please_log_into_your_existing_account_string">Please Log into your existing account</string>
    <string name="your_email_string">Your Email</string>
    <string name="your_password_string">Your Password</string>
    <string name="log_in_string">Log in</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="register_please__string">Register please!</string>
    <string name="your_last_name_string">Your last name</string>
    <string name="your_first_name_string">Your first name</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="your_phone">Your phone</string>
    <string name="set_file">Add document</string>
    <string name="save">Save job</string>
    <string name="save_text">Save</string>
    <string name="choose_job">Choose job</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message</string>
    <string name="cheel____string">Cheel...</string>
    <string name="name_string">Name</string>
    <string name="surname_string">Surname</string>
    <string name="phone_string">Phone</string>
    <string name="name_ek1_string">name</string>
    <string name="name_ek2_string">name</string>
    <string name="name_ek3_string">name</string>
    <string name="email_string">Email</string>
    <string name="salary_string">Salary</string>
    <string name="position_string">Position</string>
    <string name="name_ek4_string">name</string>
    <string name="name_ek5_string">name</string>
    <string name="name_ek6_string">name</string>
    <string name="average_rating_string">Average rating</string>
    <string name="name_ek7_string">name</string>
    <string name="menu_document">qwe</string>
    <string name="menu_documents">Documents</string>
    <string name="_______________string"> </string>
    <string name="_________________string">Choose table</string>
    <string name="______________string">Choose field</string>
    <string name="_____________________string">Choose type of query</string>
    <string name="_______________ek1_string">Choose schema</string>
    <string name="__________string">Execute</string>
    <string name="menu_subject">Subjects</string>
    <string name="set_grade">Set grade</string>
    <string name="save_answer">Save answer</string>
</resources>