<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="SingUpViewModel"
            type="com.example.digitalproject.viewmodels.SingUpViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:paddingLeft="100dp"
        android:paddingTop="200dp"
        android:paddingRight="100dp"
        android:showDividers="middle"
        tools:context=".SingUpActivity">

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:minHeight="48dp"
            android:text="@={SingUpViewModel.lastname}"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/button_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:onClick="@{()->SingUpViewModel.register()}"/>

        <TextView
            android:id="@+id/info_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>
</layout>