<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/frame_5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/page_frame_5_ek1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <View
                    android:id="@+id/_bg__frame_5_ek2"
                    android:layout_width="411dp"
                    android:layout_height="731dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/_bg__frame_5_ek2_shape" />

                <TextView
                    android:id="@+id/cheel___"
                    android:layout_width="78dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="181dp"
                    android:layout_marginTop="472dp"
                    android:text="@string/cheel____string"
                    android:textColor="@color/cheel____color"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/rectangle_23"
                    android:layout_width="343dp"
                    android:layout_height="79dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="127dp"
                    android:background="@drawable/rectangle_23_shape" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="54.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="84dp"
                    android:layout_marginTop="134dp"
                    android:text="@string/name_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/surname"
                    android:layout_width="75.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="177dp"
                    android:layout_marginTop="134dp"
                    android:text="@string/surname_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="59.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="287dp"
                    android:layout_marginTop="134dp"
                    android:text="@string/phone_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="49dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="168dp"
                    android:text="@string/name_ek1_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textSurname"
                    android:layout_width="49dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="194dp"
                    android:layout_marginTop="168dp"
                    android:text="@string/name_ek2_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPhone"
                    android:layout_width="60dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="296dp"
                    android:layout_marginTop="168dp"
                    android:text="@string/name_ek3_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/rectangle_24"
                    android:layout_width="343dp"
                    android:layout_height="79dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="225dp"
                    android:background="@drawable/rectangle_24_shape" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="53.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="232dp"
                    android:text="@string/email_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/salary"
                    android:layout_width="58.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="185dp"
                    android:layout_marginTop="232dp"
                    android:text="@string/salary_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/position"
                    android:layout_width="70.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="282dp"
                    android:layout_marginTop="232dp"
                    android:text="@string/position_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="49dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="266dp"
                    android:text="@string/name_ek4_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textSalary"
                    android:layout_width="49dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="194dp"
                    android:layout_marginTop="266dp"
                    android:text="@string/name_ek5_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPosition"
                    android:layout_width="60dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="296dp"
                    android:layout_marginTop="266dp"
                    android:text="@string/name_ek6_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/rectangle_25"
                    android:layout_width="343dp"
                    android:layout_height="79dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="323dp"
                    android:background="@drawable/rectangle_25_shape" />

                <TextView
                    android:id="@+id/average_rating"
                    android:layout_width="111.5dp"
                    android:layout_height="24.5dp"
                    android:layout_marginStart="159dp"
                    android:layout_marginTop="332dp"
                    android:text="@string/average_rating_string"
                    android:textColor="@color/name_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="49dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="194dp"
                    android:layout_marginTop="364dp"
                    android:text="@string/name_ek7_string"
                    android:textColor="@color/name_color"
                    android:textSize="14sp" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>
</LinearLayout>